discard all changes made since last commit

--- a/.gitconfig
+++ b/.gitconfig
@@ -66,6 +66,8 @@
 	# Show the user email for the current repository.
 	whoami = config user.email
 
+	ds = git stash && git stash clear
+
 [apply]
 
 	# Detect whitespace errors when applying a patch.
