--- a/.gitconfig
+++ b/.gitconfig
@@ -66,7 +66,7 @@
 	# Show the user email for the current repository.
 	whoami = config user.email
 
-	ds = stash && git stash clear
+	ds = !git stash && git stash clear
 
 [apply]
 
