chore: remove unused tool configs and update for Apple Silicon
- Remove vim configs (.vimrc.bkp, .gvimrc, .vim/)
- Remove unused tool configs (.screenrc, .gdbinit, .tmux.conf, .inputrc, .hgignore)
- Remove .osx redirect file (actual config is in .macos)
- Update .curlrc and .wgetrc with modern Chrome user agents
- Update .gitconfig autocorrect to modern syntax (prompt)
- Remove tmux and gdb from brew.sh installation list

All remaining configs are compatible with macOS Sequoia on Apple Silicon

--- a/.gitconfig
+++ b/.gitconfig
@@ -143,8 +143,8 @@
 
 [help]
 
-	# Automatically correct and execute mistyped commands.
-	autocorrect = 1
+	# Automatically correct and execute mistyped commands after confirmation.
+	autocorrect = prompt
 
 [merge]
 
