--- a/.wgetrc
+++ b/.wgetrc
@@ -4,10 +4,10 @@ timestamping = on
 # Do not go up in the directory structure when downloading recursively
 no_parent = on
 
-# Wait 60 seconds before timing out. This applies to all timeouts: DNS, connect and read. (The default read timeout is 15 minutes!)
+# Wait 60 seconds before timing out
 timeout = 60
 
-# Retry a few times when a download fails, but don’t overdo it. (The default is 20!)
+# Retry a few times when a download fails, but don't overdo it
 tries = 3
 
 # Retry even when the connection was refused
@@ -19,14 +19,11 @@ trust_server_names = on
 # Follow FTP links from HTML documents by default
 follow_ftp = on
 
-# Add a `.html` extension to `text/html` or `application/xhtml+xml` files that lack one, or a `.css` extension to `text/css` files that lack one
+# Add a `.html` extension to `text/html` or `application/xhtml+xml` files that lack one
 adjust_extension = on
 
 # Use UTF-8 as the default system encoding
-# Disabled as it makes `wget` builds that don’t support this feature unusable.
-# Does anyone know how to conditionally configure a wget setting?
-# http://unix.stackexchange.com/q/34730/6040
-#local_encoding = UTF-8
+local_encoding = UTF-8
 
 # Ignore `robots.txt` and `<meta name=robots content=nofollow>`
 robots = off
@@ -34,5 +31,5 @@ robots = off
 # Print the HTTP and FTP server responses
 server_response = on
 
-# Disguise as IE 9 on Windows 7
-user_agent = Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)
+# Modern user agent (Chrome on macOS)
+user_agent = Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
