feat: add Apple Silicon optimizations and migration workflow (#1)
* Resolve README.md merge conflict by combining local and upstream changes

* feat: modernize dotfiles for zsh and optimize brew.sh with unified package list

* feat: update macos

* wip

* wip: secrets script update

* wip: secrets

* feat: rm browser backups

* Improve error handling and failure reporting

* Add cloud provider config backups (GCP, Azure, DigitalOcean, Terraform)

* Add API token/credentials backup from ~/.config

- Add glab-cli (GitLab access tokens & OAuth)
- Add linear-cli (Linear API key)
- Add gh-copilot (GitHub Copilot config)
- Add firebase-tools.json (Firebase OAuth tokens)

These CLI tools store credentials in ~/.config that need to be backed up.

* refactor: use arrays for backup items

- Move backup items definition to shared associative array
- Simplify backup section with loop over array items
- Refactor restore section to use same array
- Keep GPG as special case (requires export/import)
- Easier to maintain: add/remove items by modifying array
- Reduces code duplication significantly

* Add comprehensive documentation header

* chore: remove unused tool configs and update for Apple Silicon

- Remove vim configs (.vimrc.bkp, .gvimrc, .vim/)
- Remove unused tool configs (.screenrc, .gdbinit, .tmux.conf, .inputrc, .hgignore)
- Remove .osx redirect file (actual config is in .macos)
- Update .curlrc and .wgetrc with modern Chrome user agents
- Update .gitconfig autocorrect to modern syntax (prompt)
- Remove tmux and gdb from brew.sh installation list

All remaining configs are compatible with macOS Sequoia on Apple Silicon

* fix: update macOS scripts for Sequoia Apple Silicon compatibility

- Comment out hibernatemode setting (Apple Silicon handles it better)
- Remove Terminal and iTerm theme setup (outdated)
- Remove Sublime Text settings section (unused)
- Delete init/ directory with obsolete theme files
- Remove duplicate wireshark entry in brew.sh
- Document --no-quara

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ Thumbs.db
 .Spotlight-V100
 .Trashes
 .idea
+
+# Local secrets backup - do NOT commit contents
+.secrets/
+
+# mise (version manager) - commit template, ignore local overrides
+.mise.local.toml
+.mise/
