--- a/.gitconfig
+++ b/.gitconfig
@@ -84,6 +84,10 @@
 	excludesfile = ~/.gitignore
 	attributesfile = ~/.gitattributes
 
+	# Use delta as the pager for git commands (if available)
+	# https://github.com/dandavison/delta
+	pager = delta
+
 	# Treat spaces before tabs and all kinds of trailing whitespace as an error.
 	# [default] trailing-space: looks for spaces at the end of a line
 	# [default] space-before-tab: looks for spaces before tabs at the beginning of a line
@@ -136,6 +140,32 @@
 	# Detect copies as well as renames.
 	renames = copies
 
+	# Use delta for better diffs (if available)
+	# https://github.com/dandavison/delta
+	colorMoved = default
+
+[interactive]
+
+	# Use delta for interactive commands
+	diffFilter = delta --color-only
+
+[delta]
+
+	# Delta configuration for beautiful diffs
+	navigate = true    # use n and N to move between diff sections
+	light = false      # set to true if you're in a terminal w/ a light background color
+	line-numbers = true
+	side-by-side = true
+	syntax-theme = Dracula
+
+[merge]
+
+	# Use delta for merge conflicts
+	conflictstyle = diff3
+
+	# Include summaries of merged commits in newly created merge commit messages
+	log = true
+
 [diff "bin"]
 
 	# Use `hexdump` to diff binary files.
@@ -143,13 +173,8 @@
 
 [help]
 
-	# Automatically correct and execute mistyped commands.
-	autocorrect = 1
-
-[merge]
-
-	# Include summaries of merged commits in newly created merge commit messages
-	log = true
+	# Automatically correct and execute mistyped commands after confirmation.
+	autocorrect = prompt
 
 [push]
 
