--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Compiled Python files
-*.pyc
-
-# Folder view configuration files
-.DS_Store
-Desktop.ini
-
-# Thumbnail cache files
-._*
-Thumbs.db
-
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
-.idea
+# Personal configuration - do NOT commit
+.extra
 
 # Local secrets backup - do NOT commit contents
 .secrets/
-
-# mise (version manager) - commit template, ignore local overrides
-.mise.local.toml
-.mise/
