--- a/.extra.template
+++ b/.extra.template
@@ -16,10 +16,19 @@ GIT_COMMITTER_EMAIL="$GIT_AUTHOR_EMAIL"
 git config --global user.email "$GIT_AUTHOR_EMAIL"
 
 # GPG signing key (optional - uncomment and set if you use GPG signing)
-# Get your key ID with: gpg --list-secret-keys --keyid-format=long
-# Note: GPG keys and configuration are backed up/restored by scripts/secrets.sh
-# This includes ~/.gnupg/gpg-agent.conf with pinentry-mac configuration
-# After restoring secrets, uncomment the lines below and set your key ID:
+#
+# IMPORTANT: If you're setting up a new Mac and restoring secrets:
+#   1. Create this .extra file FIRST (before running bootstrap.sh)
+#   2. Run bootstrap.sh
+#   3. Run scripts/secrets.sh restore (this restores GPG private keys)
+#   4. The restore script will display your available GPG keys
+#   5. Come back here, uncomment the lines below, and add your key ID
+#   6. Run: source ~/.extra
+#
+# To find your GPG key ID manually:
+#   gpg --list-secret-keys --keyid-format=long
+#   Look for the part after "rsa4096/" or similar (e.g., "AD053E9A38381E43")
+#
 # GIT_GPG_KEY="YOUR_GPG_KEY_ID"
 # git config --global user.signingkey "$GIT_GPG_KEY"
 
